--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         // IMPORTANT: Replace these with your actual Supabase credentials
         // Get these from: https://app.supabase.com/project/YOUR_PROJECT/settings/api
         const SUPABASE_URL = https://nmxlkghuetwdlyxiyqqz.supabase.co;
-        const SUPABASE_ANON_KEY = sb_publishable_opamZeJzL0t3gDpZivkwTQ_fALOXJ6k;
+        const SUPABASE_ANON_KEY = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5teGxrZ2h1ZXR3ZGx5eGl5cXF6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxMDQ3ODcsImV4cCI6MjA3MDY4MDc4N30.dCKdVI2HRDLmxE8XnuZGrr6PPRw45cJCBVcD26b7Juo;
         
         // Initialize Supabase client
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
